--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <body style="background: White">
     <!-- Begin typing your web page here. -->
     <!-- The following code embeds a WebGL canvas panel, loads certain scene(s), and displays panel(s) of their controls.-->
-    <div class="canvas-widget" id="main-canvas"></div>
+    <div class="canvas-widget" id="main-canvas">
+      <audio id="crashSound" src="assets/pipe.mp3" preload="auto"></audio>
+    </div>
     <script type="module">
       // ********************* THE ENTRY POINT OF YOUR WHOLE PROGRAM STARTS HERE *********************
       // Indicate which element on the page you want the Canvas_Widget to replace with a 3D WebGL area:
